--- a/index.html
+++ b/index.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131 Course</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson">
+    <meta name="author" content="Joshua Yamoah Yankson">
+    <title>WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson</title>
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
+    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <img src="" alt="">
 </head>
 <body>
-    <p>Hello to this course!</p>
+    <header>
+        <h1>WDD 131: Dynamic Web Fundamentals - Joshua Yamoah Yankson</h1>
+        <nav>
+            <a href="https://www.linkedin.com/in/joshua-yankson-b39a431a0/">LinkedIn</a>
+            <a href="https://byui.instructure.com/">I-Learn</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/jacob/6?lang=eng">Favorite scripture</a>
+            <a href="#">Final Project</a>
+        </nav>       
+    </header>
+    <main>
+        <section class="card">
+            <h3>About Me</h3>
+            <p>My name is Joshua Yamoah Yankson from Ghana.I am a current undergraduate
+                student pursuing my bachelors degree in Software Development at Brigham Young University
+                Idaho in the USA. I am still taking courses to complete my first certificate now
+                and hope to be done in the next months. I believe in the technological advancement
+                happening these days and understand that my contribution to this great advancement
+                will help make the world a better place.
+            </p>
+            <img src="images/portfolio_header_resized.jpg" alt="">
+        </section>
+        <section class="card">
+            <h3>Web Development Resources</h3>
+            <ul>
+                <li><a href="https://exercism.org/" target="_blank">Exercism</a></li>
+                <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+                <li><a href="https://www.youtube.com/" target="_blank">YouTube</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>
+            &copy; <span id="currentyear"></span> Joshua Yamoah Yankson Ghana <br>
+        </p>
+        <p id="lastModified">lastModified</p>
+
+    </footer>
 </body>
 </html>
