--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 will help make the world a better place.
             </p>
             <img src="images/portfolio_header_resized.jpg" alt="">
+            <!-- <img src="images/Ghana_Flag.jpg" alt="some_picture" width="100px" height="75px"> -->
         </section>
         <section class="card">
             <h2>Web Development Resources</h2>
