--- a/temples.html
+++ b/temples.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson">
+    <meta name="author" content="Joshua Yamoah Yankson">
+    <title>WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson</title>
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
