--- a/temples.html
+++ b/temples.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson">
     <meta name="author" content="Joshua Yamoah Yankson">
-    <title>WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson - Temple Album</title>
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
