several assignments worked on

--- a/place.html
+++ b/place.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Place</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson">
+    <meta name="author" content="Joshua Yamoah Yankson">
+    <title>WDD 131 - Dynamic Web Fundamentals - Joshua Yamoah Yankson - Place</title>
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place_larger.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
